--- a/app/src/main/res/layout/add_new_category.xml
+++ b/app/src/main/res/layout/add_new_category.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dp"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical">
 
     <EditText
@@ -22,5 +23,7 @@
         android:id="@+id/addNewCategory"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="@string/add_new_budget" />
+        android:background="@android:color/holo_orange_dark"
+        android:text="add new category"
+        android:textColor="@android:color/background_light" />
 </LinearLayout>
