--- a/app/src/main/res/layout/profile_activity.xml
+++ b/app/src/main/res/layout/profile_activity.xml
@@ -1,24 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/holo_purple">
-
-
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@android:color/holo_orange_light"
+    android:fitsSystemWindows="true">
 
     <LinearLayout
-        android:layout_width="348dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="158dp"
-        android:background="#96000000"
-        android:orientation="vertical">
-
 
         android:orientation="vertical"
         android:paddingLeft="24dp"
@@ -67,30 +56,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:labelFor="@+id/name"
-            android:text="@string/please_enter_your_name"
-            android:textColor="@android:color/background_light" />
+            android:text="@string/please_enter_your_name" />
 
         <EditText
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
-            android:textColor="@android:color/background_light" />
-
+            android:inputType="text" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:labelFor="@+id/phone"
-            android:text="@string/please_enter_your_phone_number"
-            android:textColor="@android:color/background_light" />
+            android:text="@string/please_enter_your_phone_number" />
 
         <EditText
             android:id="@+id/phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="number"
-            android:textColor="@android:color/background_light" />
+            android:inputType="number" />
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/profile_data"
@@ -99,16 +83,8 @@
             android:layout_marginBottom="24dp"
             android:layout_marginTop="24dp"
 
-    <Button
-        android:id="@+id/profile_data"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="93dp"
-        android:background="#ff473a"
-        android:text="Sign in" />
+            android:padding="12dp"
+            android:text="Next" />
 
-
-</RelativeLayout>
-
+    </LinearLayout>
+</ScrollView>
